Phase out the RoomInstance as we now have the room IDs everywhere